--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require": {
         "php": ">=5.5.9",
         "guzzlehttp/guzzle":"~6.1.0",
-		"psr/http-message":"~1.0"
+		"psr/http-message":"~1.0",
+		"aliyuncs/oss-sdk-php": "~2.0"
     },
     "autoload": {
 		 "psr-0": {
