--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
                 "Aliyun_Log_": "src/AliyunLog/"
             },
             "psr-4":{
-                "AliyunMNS\\": "src/"
+                "AliyunMNS\\": "src/AliyunMNS/"
             }
     },
     "minimum-stability": "stable"
