--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     },
     "autoload": {
 		  "psr-0": {
-                "Aliyun_Log_": "src/AliyunLog/"
+                "Aliyun_Log_": "src/AliyunLog/",
+				"Aliyun_Jaq_":"src/AliyunJaq/"
             },
             "psr-4":{
                 "AliyunMNS\\": "src/AliyunMNS/"
